--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "express": "~4.14.1",
     "knex": "^0.12.9",
     "morgan": "~1.7.0",
+    "mysql": "^2.13.0",
     "pug": "~2.0.0-beta10",
+    "sequelize": "^3.30.4",
     "serve-favicon": "~2.3.2"
   }
 }
